// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon should render icon briefcase 1`] = `
<span
  className="sc-AxjAm jnaJRY lnr lnr-briefcase"
/>
`;

exports[`Icon should render icon cog 1`] = `
<span
  className="sc-AxjAm jnaJRY lnr lnr-cog"
/>
`;

exports[`Icon should render icon eye 1`] = `
<span
  className="sc-AxjAm jnaJRY lnr lnr-eye"
/>
`;

exports[`Icon should render icon home 1`] = `
<span
  className="sc-AxjAm jnaJRY lnr lnr-home"
/>
`;

exports[`Icon should render icon rocket 1`] = `
<span
  className="sc-AxjAm jnaJRY lnr lnr-rocket"
/>
`;

exports[`Icon should render icon users 1`] = `
<span
  className="sc-AxjAm jnaJRY lnr lnr-users"
/>
`;

exports[`Icon should render icon with custom styles 1`] = `
<span
  className="sc-AxirZ dPuKDt sc-AxjAm jnaJRY lnr lnr-home"
/>
`;
